feature: trip-log 생성
